<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ece4d7"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:elevation="100dp"
            app:cardBackgroundColor="#610c46"
            app:cardCornerRadius="50dp"
            app:cardElevation="100dp">

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:elevation="100dp"
                android:gravity="center"
                android:text="@string/name_main"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#f2f3f5"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPic"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#ece4d7"
            app:cardCornerRadius="10000dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="253dp"
                android:layout_height="247dp"
                android:contentDescription="@string/image_alt"
                app:srcCompat="@drawable/moi"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:elevation="100dp"
            app:cardBackgroundColor="#610c46"
            app:cardCornerRadius="50dp"
            app:cardElevation="100dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="100dp"
                android:gravity="center"
                android:text="@string/title_main"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#f2f3f5"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAboutMe"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:elevation="1000dp"
            app:cardBackgroundColor="#ece4d7"
            app:cardElevation="1000dp">

            <TextView
                android:id="@+id/textAboutMe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:elevation="100dp"
                android:gravity="center"
                android:text="@string/about_main"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#610c46" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardKnowMore"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:elevation="0dp"
            app:cardBackgroundColor="#ece4d7"
            app:cardElevation="0dp">

            <Button
                android:id="@+id/buttonKnowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="1000dp"
                android:text="@string/button_main" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>